# emacs.d

./: .clang-format  .gitignore  LICENSE  README.md  README.org  bash.sh  cbt.sh  init.el  old_init.el  youtube.sh
c_cpp/: setup.el
configs/: kitty.conf  mpv.conf
cpp_template/: CMakeLists.txt  make_run.sh
cpp_template/src/: main.cpp  main.hpp
general/: base-setup.el  install.el  mode-line.el  theme.el
templates/: cpp_template.tar.zst
templates/cpp/: CMakeLists.txt  main.cpp
utility_scripts/: cbt.sh  convert_to_webp.sh  yt.sh
